0.22 (04/23/2015)

1.   QWidget::activateWindow() should only be used on Window!

0.21 (04/19/2015)

1.   Corrected Poptastic kernel timer.
2.   RetroPhone work. Incomplete.
3.   Disable SSL session tickets.
4.   Disable SSL session sharing. Qt 5.2.x or higher is required.
5.   Disable SSL session persistence. Qt 5.2.x or higher is required.
6.   Upgraded NTRU files, 04/18/2015.
7.   Upgraded OpenSSL products to version 1.0.2a on Windows.
8.   Ignore duplicate keywords in link searching.
9.   Corrected isEncrypted() use in spoton_neighbor::saveStatus().
10.  Corrected throw clauses. Removed redundant try-catch blocks.
11.  Set forward-only database queries.
12.  Virtual keyboard for sensitive fields. Please double-click to
     activate. All authentication fields support the keyboards. The SMP
     mechanism does as well. English and German layouts currently provided.
13.  Upgraded libgcrypt to version 1.6.3 on Windows.
14.  Upgraded libgpg-error to version 1.13 on Windows.
15.  Bind data encrypted with public keys into the message authentication
     codes. Previous functionality will be disrupted.
16.  Destroy the chunk.memory object in spoton_kernel::popPoptastic() if
     cURL fails.
17.  Support OS X 10.6.x and Qt 5.x.
18.  Non-iterative message sharing between neighbors.
19.  Modified read intervals of StarBeam readers. Reading is now
     predictable. Terminate a reader's timer if the StarBeam is completed.
20.  StarBeam read intervals. Default, 1.5 seconds.
21.  Added PRAGMA secure_delete = ON in spoton::slotDeleteUrlDistillers().
22.  URL distillers must include paths and not only hosts.
23.  Activate tool button menus for mobile devices.
24.  Removed explicit casts to malloc() in libspoton.c. Increased version to
     0.09.
25.  The kernel will ignore SIGHUP on Unix systems.
26.  Modified default permissions. StarBeam magnets will now be
     automatically accepted by participants. Please see the Options
     panel.