@@ -3480,6 +3480,8 @@ bool spoton_misc::prepareUrlDistillersDatabase(void)
 		       "domain_hash TEXT KEY NOT NULL, "
 		       "PRIMARY KEY (direction, domain_hash))"))
 	  ok = false;
+	else
+	  ok = true;
       }
     else
       ok = false;
@@ -3510,6 +3512,8 @@ bool spoton_misc::prepareUrlKeysDatabase(void)
 		       "cipher_type TEXT NOT NULL, "
 		       "symmetric_key TEXT NOT NULL)"))
 	  ok = false;
+	else
+	  ok = true;
 
 	if(!query.exec("CREATE TRIGGER IF NOT EXISTS "
 		       "import_key_information_trigger "
@@ -3518,6 +3522,8 @@ bool spoton_misc::prepareUrlKeysDatabase(void)
 		       "DELETE FROM import_key_information; "
 		       "END"))
 	  ok = false;
+	else
+	  ok &= true;
 
 	if(!query.exec("CREATE TABLE IF NOT EXISTS remote_key_information ("
 		       "cipher_type TEXT NOT NULL, "
@@ -3525,6 +3531,8 @@ bool spoton_misc::prepareUrlKeysDatabase(void)
 		       "hash_key TEXT NOT NULL, "
 		       "hash_type TEXT NOT NULL)"))
 	  ok = false;
+	else
+	  ok &= true;
 
 	if(!query.exec("CREATE TRIGGER IF NOT EXISTS "
 		       "remote_key_information_trigger "
@@ -3533,6 +3541,8 @@ bool spoton_misc::prepareUrlKeysDatabase(void)
 		       "DELETE FROM remote_key_information; "
 		       "END"))
 	  ok = false;
+	else
+	  ok &= true;
       }
     else
       ok = false;
